
Cahiers de textes 2:
- Ajout d'une visionneuse Instrumenpoche.
- Mise à jour de l'app GeoGebra.
- Possibilité de copier d'un clic le code source HTML d'une vignette.

Discipline:
- Possibilité de donner l'accès parent/élève aux incidents le concernant, 
  mais sans afficher les détails de l'incident 
  (pour inciter à un contact téléphonique avec le CPE).

Orientation:
- Facilité de saisie globale de l'orientation pour une classe donnée.

AID:
- Possibilité de désigner comme "professeur" un compte scolarité ou cpe.

Épreuves blanches:
- Possibilité d'exporter les notes en CSV sur un autre référentiel que 20.

Bibliothèques:
- Mise à jour de TinyButStrong en version 3.11.0 (PHP 5 and 7) (2019-02-10)
- Mise à jour du plugin openTBS de TinyButStrong en version 1.9.12 (2019-03-10)
- Mise à jour de PHPMailer en version 6.0.7 (pour php>=5.3)
- Mise à jour de tFPDF en version 1.25 (2018-03-19)


Gepi-1.7.4 (28/01/2019)
===========================

Absences 2: 
- Possibilité de générer un fichier ODT de rappel à la loi (depuis Bilan individuel).
  Possibilité proposée au-delà d'un seuil d'absences paramétrable dans le module Abs2.
- Affichage en CPE/Scolarité des notifications dans l'onglet Absences de la page
  de Consultation élève.
- Possibilité dans les notifications d'extraire le détail des absences plutôt 
  que les mentions matin/après-midi/journée (voir paramétrage du module Abs2).

Actions:
- Ajout d'un module Actions pour gérer des inscriptions/présence élèves,
  par exemple sur les sorties/actions UNSS.

AID:
- Possibilité de rendre des AID non visibles des élèves 
  (pour par exemple préparer un voyage scolaire, et ne le rendre visible 
  qu'une fois le voyage prêt).
- Possibilité de définir un Résumé par défaut au niveau de la catégorie AID.
- Possibilité de définir des super-gestionnaires de statut scolarité.

Carnets de notes:
- Ajout de modes de saisie de notes pour passer plus vite à la saisie de la note suivante.